# dmp-c-corelib

./: CMakeLists.txt  README.md
include/allocator/: Allocator.h
include/dmp/Portability/: Restrict.h
include/dmp/allocator/: Allocator.h
include/dmp/core/allocator/: Allocator.h
include/dmp/core/portability/: Allocator.h  DebugTrap.h
include/dmp/core/template/: Template.h
include/dmp/core/utility/: Assert.h
include/dmp/utility/: Assert.h
include/utility/: Assert.h  BuildMode.h
include/version/: Version.h
src/: Allocator.c  Version.c  impl.c
